fixed issue with creating new APDs with the correct apdType
