# common/schemas/combined.js
@@ -55,6 +55,7 @@ export const hitechCombinedSchema = Joi.object({
       'array.min': 'Activities have not been added for this APD.'
     })
     .items({
+      id: Joi.any(),
       activityId: Joi.any(),
       name: activityNameSchema,
       fundingSource: activityFundingSourceSchema,
@@ -111,27 +112,22 @@ export const mmisCombinedSchema = Joi.object({
   statePrioritiesAndScope: statePrioritiesAndScopeSchema,
   previousActivities: Joi.any(),
   // activities schema copied from schemas/activitiesDashboard.js
-  activities: Joi.array()
-    .min(1)
-    .messages({
-      'array.base': 'Activities have not been added for this APD.',
-      'array.min': 'Activities have not been added for this APD.'
-    })
-    .items({
-      activityId: Joi.any(),
-      name: activityNameSchema,
-      activityOverview: mmisActivityOverviewSchema,
-      activitySchedule: activityScheduleSchema,
-      analysisOfAlternativesAndRisks: analysisOfAlternativesAndRisksSchema,
-      conditionsForEnhancedFunding: conditionsForEnhancedFundingSchema,
-      milestones: Joi.array().items(milestonesSchema),
-      outcomes: Joi.array().items(outcomeMetricsSchema),
-      statePersonnel: Joi.array().items(statePersonnelSchema),
-      expenses: Joi.array().items(expensesSchema),
-      contractorResources: Joi.array().items(contractorResourcesSchema),
-      costAllocation: costAllocationSchema,
-      quarterlyFFP: Joi.any() // quarterlyFFP is validated in the budget
-    }),
+  activities: Joi.array().items({
+    id: Joi.any(),
+    activityId: Joi.any(),
+    name: activityNameSchema,
+    activityOverview: mmisActivityOverviewSchema,
+    activitySchedule: activityScheduleSchema,
+    analysisOfAlternativesAndRisks: analysisOfAlternativesAndRisksSchema,
+    conditionsForEnhancedFunding: conditionsForEnhancedFundingSchema,
+    milestones: Joi.array().items(milestonesSchema),
+    outcomes: Joi.array().items(outcomeMetricsSchema),
+    statePersonnel: Joi.array().items(statePersonnelSchema),
+    expenses: Joi.array().items(expensesSchema),
+    contractorResources: Joi.array().items(contractorResourcesSchema),
+    costAllocation: costAllocationSchema,
+    quarterlyFFP: Joi.any() // quarterlyFFP is validated in the budget
+  }),
   securityPlanning: securityPlanningSchema,
   assurancesAndCompliances: mmisAssurancesAndComplianceSchema,
   budget: Joi.object({
@@ -144,45 +140,6 @@ export const mmisCombinedSchema = Joi.object({
     mmisByFFP: Joi.any(),
     combined: Joi.any(),
     activityTotals: Joi.any(),
-    activities: Joi.object().pattern(
-      /[a-zA-Z0-9]{8}/,
-      Joi.object({
-        _id: Joi.any(),
-        costsByFFY: Joi.any(),
-        quarterlyFFP: Joi.object({
-          years: Joi.object().pattern(
-            /\d{4}/,
-            Joi.object({
-              1: Joi.any(),
-              2: Joi.any(),
-              3: Joi.any(),
-              4: Joi.any(),
-              subtotal: Joi.object({
-                combined: Joi.any(),
-                contractors: Joi.object({
-                  dollars: Joi.any(),
-                  percent: Joi.number().precision(3).valid(1).messages({
-                    'any.default':
-                      'Private Contractor Costs quarterly percentages must total 100%',
-                    'any.only':
-                      'Private Contractor Costs quarterly percentages must total 100%'
-                  })
-                }),
-                inHouse: Joi.object({
-                  dollars: Joi.any(),
-                  percent: Joi.number().precision(3).valid(1).messages({
-                    'any.default':
-                      'State Staff and Expenses (In-House Costs) quarterly percentages must total 100%',
-                    'any.only':
-                      'State Staff and Expenses (In-House Costs) quarterly percentages must total 100%'
-                  })
-                })
-              })
-            })
-          ),
-          total: Joi.any()
-        })
-      })
-    )
+    activities: budgetActivitiesSchema
   })
 });
